--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ neo_version=21.1.119
 neo_version_range=[21.1.119,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[1,)
+curios_version=9.2.2+1.21.1
 
 ## Mod Properties
 
