--- a/gradle.properties
+++ b/gradle.properties
@@ -31,9 +31,9 @@ curios_version=9.2.2+1.21.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=couplerings
 # The human-readable display name for the mod.
-mod_name=couplerings
+mod_name=Couple Rings
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=MIT
 # The mod version. See https://semver.org/
 mod_version=1.0.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
@@ -41,6 +41,6 @@ mod_version=1.0.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=me.meeu.couplerings
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=Meeu
+mod_authors=MeeuChan
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=A cute Minecraft mode for couples!
